Media breakpoint for laptops, changed padding and margins from rem to em, fixed spacing and sizing of elements

--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,11 @@
 /* Mobile First Development */
 
-:root{
-    --color-dark-cyan: hsl(158, 36%, 37%);
-    --color-cream: hsl(30, 38%, 92%);
-    --color-very-dark-blue: hsl(212, 21%, 14%);
-    --color-dark-grayish-blue: hsl(228, 12%, 48%);
-    --color-white: hsl(0, 0%, 100%);
+:root {
+  --color-dark-cyan: hsl(158, 36%, 37%);
+  --color-cream: hsl(30, 38%, 92%);
+  --color-very-dark-blue: hsl(212, 21%, 14%);
+  --color-dark-grayish-blue: hsl(228, 12%, 48%);
+  --color-white: hsl(0, 0%, 100%);
 }
 
 /* Reset default styles  */
@@ -17,92 +17,129 @@
   padding: 0;
 }
 
-.desktop-img{
+.desktop-img {
+  display: none;
+  max-width: 100%;
+}
+
+.mobile-img {
+  max-width: 100%;
+}
+
+body {
+  background-color: var(--color-cream);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+}
+
+.main-content {
+  max-width: 90%;
+  background-color: var(--color-white);
+  border-radius: 0.75em;
+  overflow: hidden;
+}
+
+h1 {
+  font-family: "Montserrat", serif;
+  font-size: 0.7rem;
+  font-weight: 500;
+  letter-spacing: 0.35em;
+  opacity: 60%;
+}
+
+h2 {
+  font-family: "Fraunces", serif;
+  font-size: 1.98rem;
+  line-height: 100%;
+}
+
+.text-container {
+  padding: 1.1em;
+  display: flex;
+  flex-direction: column;
+  gap: 1em;
+}
+
+.description {
+  font-size: 0.9rem;
+  font-family: "Montserrat", serif;
+  opacity: 60%;
+  line-height: 160%;
+}
+
+button {
+  background-color: var(--color-dark-cyan);
+  border-radius: 0.5em;
+  border: none;
+  padding: 1em;
+  color: var(--color-white);
+  font-family: "Montserrat", serif;
+  font-weight: 500;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 0.7em;
+  font-size: 0.9rem;
+}
+
+.prices-container {
+  font-family: "Fraunces", serif;
+  display: flex;
+  gap: 1.2em;
+  align-items: center;
+}
+
+.new-price {
+  color: var(--color-dark-cyan);
+  font-weight: 700;
+  font-size: 2rem;
+}
+
+.old-price {
+  font-family: "Montserrat", serif;
+  font-size: 0.8rem;
+  opacity: 60%;
+}
+
+/* Tablets and larger screens */
+
+@media only screen and (min-width: 768px) {
+  .mobile-img {
     display: none;
+  }
+
+  .desktop-img {
+    display: block;
     width: 100%;
-}
+    object-fit: cover;
+  }
 
-.mobile-img{
-    max-width: 100%;
-}
-
-body{
-    background-color: var(--color-cream);
+  .main-content {
+    max-width: 600px;
+    width:100%;
     display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
-}
+    flex-direction: row;
+    align-items: stretch;
+  }
 
-.main-content{
-    max-width: 90%;
-    background-color: var(--color-white);
-    border-radius: 1rem;
-    overflow: hidden; /* to ensure border radius on image */
-}
+  .text-container {
+    padding: 2em;
+    flex: 1 1 50%;
+    justify-content: space-between;
+  }
 
+  .image-container {
+    flex: 1 1 50%;
+  }
 
-h1{
-    font-family: "Montserrat", serif;
-    font-size: 0.8rem;
-    font-weight: 500;
-    letter-spacing: 0.25rem;
-    opacity: 60%;
-}
+  h1{
+    margin-bottom: -0.5em;
+  }
 
-h2{
-    font-family: "Fraunces", serif;
-    font-size: 1.9rem;
-    line-height: 105%;
-}
-
-.text-container{
-    padding: 1.1rem;
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-}
-
-.description{
-    font-size: 0.9rem;
-    font-family: "Montserrat", serif;
-    opacity: 60%;
-    line-height: 150%;
-}
-
-button{
-    background-color: var(--color-dark-cyan);
-    border-radius: 0.5rem;
-    border: none;
-    padding: 1rem;
-    color: var(--color-white);
-    font-family: "Montserrat", serif;
-    font-weight: 500;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 0.5rem;
-}
-
-.cart-image{
-    padding-right: 0.5rem;
-}
-
-.prices-container{
-    font-family: "Fraunces", serif;
-    display: flex;
-    gap: 1rem;
-    align-items: center;
-}
-
-.new-price{
-    color: var(--color-dark-cyan);
-    font-weight: 700;
-    font-size: 2rem;
-}
-
-.old-price{
-    font-size: 0.8rem;
-    opacity: 60%;
+  h1 {
+    letter-spacing: 0.45em;
+  }
 }
